<resources>
    <string name="app_name">GooseGame</string>
    <string name="the_adventurer_2">The Adventurer</string>
    <string name="nouvelle_partie">Nouvelle partie</string>
    <string name="scores">Scores</string>
    <string name="textview">TextView</string>
    <string name="retour">Retour</string>
    <string name="affichage" />
    <string name="nop" />
    <string name="Retour_Menu">Retour Menu</string>
    <string name="radiobutton">RadioButton</string>
    <string name="difficulty_1">Difficulté Facile</string>
    <string name="difficulty_2">Difficulté Moyen</string>
    <string name="difficulty_3">Difficulté Hardcore</string>
    <string name="avatar_1">Darius</string>
    <string name="avatar_2">Geralt</string>
    <string name="avatar_3">Xera</string>
    <string name="ImagePerso">ImagePerso</string>
    <string name="seconde">s</string>
    <string name="lancerDe">Lancer le dé</string>
    <string name="updateTime">Time : 0</string>
    <string name="next">Suivant</string>
    <string name="difficulty_choice">Choisir votre difficulté</string>
    <string name="avatar_choice">Choix de l\'avatar</string>
    <string name="about_label">About ?</string>
    <string name="about_shortcut">shortcut</string>
    <string name="exit_label">exit</string>
    <string name="exit_shortcut">shortcut-exit</string>
    <string name="score0">0</string>
    <string name="end_game">End Game</string>
    <string name="menu">Menu</string>
    <string name="enter_name">Entrer votre nom</string>
    <string name="score">Score :</string>
    <string name="score_entete">Nom Level Score Timer</string>
</resources>